--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6d8795">  <td>16/05/30 04:39:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyLoginPageWithReports1.setUP()[pri:0, instance:testcases.VerifyLoginPageWithReports1@1888ff2c]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
-<tr bgcolor="6d8795">  <td>16/05/30 04:40:13</td>   <td>28399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginPageWithReports1.testHomePage()[pri:0, instance:testcases.VerifyLoginPageWithReports1@1888ff2c]">testHomePage</td> 
-  <td>main@2047526627</td>   <td></td> </tr>
-<tr bgcolor="6d8795">  <td>16/05/30 04:40:43</td>   <td>58038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyLoginPageWithReports1.tearDown(org.testng.ITestResult)[pri:0, instance:testcases.VerifyLoginPageWithReports1@1888ff2c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2047526627</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/07/08 22:55:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyLoginPage.setUP()[pri:0, instance:testcases.VerifyLoginPage@35851384]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/07/08 22:55:44</td>   <td>16688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginPage.testHomePage()[pri:0, instance:testcases.VerifyLoginPage@35851384]">testHomePage</td> 
+  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="baadb4">  <td>16/07/08 22:56:16</td>   <td>48418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyLoginPage.tearDown()[pri:0, instance:testcases.VerifyLoginPage@35851384]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
 </table>
