--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="baadb4">  <td>16/07/08 22:55:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyLoginPage.setUP()[pri:0, instance:testcases.VerifyLoginPage@35851384]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
-<tr bgcolor="baadb4">  <td>16/07/08 22:56:16</td>   <td>48418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyLoginPage.tearDown()[pri:0, instance:testcases.VerifyLoginPage@35851384]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1908316405</td>   <td></td> </tr>
-<tr bgcolor="baadb4">  <td>16/07/08 22:55:44</td>   <td>16688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginPage.testHomePage()[pri:0, instance:testcases.VerifyLoginPage@35851384]">testHomePage</td> 
-  <td>main@1908316405</td>   <td></td> </tr>
+<tr bgcolor="e0a07f">  <td>16/07/10 23:18:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StartApplication.test1()[pri:0, instance:testcases.StartApplication@1888ff2c]">test1</td> 
+  <td>main@1811044090</td>   <td></td> </tr>
 </table>
