--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e0a07f">  <td>16/07/10 23:18:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StartApplication.test1()[pri:0, instance:testcases.StartApplication@1888ff2c]">test1</td> 
-  <td>main@1811044090</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>16/07/13 21:17:18</td>   <td>0</td> <td title="&gt;&gt;MobileBaseClass.setupReport()[pri:0, instance:testcases.StartApplication@5ba23b66]">&gt;&gt;setupReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="70c169">  <td>16/07/13 21:17:19</td>   <td>440</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StartApplication.test1()[pri:0, instance:testcases.StartApplication@5ba23b66]">test1</td> 
+  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>16/07/13 21:18:14</td>   <td>55925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MobileBaseClass.tearDownReport()[pri:0, instance:testcases.StartApplication@5ba23b66]">&lt;&lt;tearDownReport</td> 
+<td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>16/07/13 21:18:14</td>   <td>55940</td> <td>&nbsp;</td><td title="&lt;&lt;MobileBaseClass.tearDown()[pri:0, instance:testcases.StartApplication@5ba23b66]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>16/07/13 21:18:14</td>   <td>56062</td> <td title="&lt;&lt;MobileBaseClass.generateReport()[pri:0, instance:testcases.StartApplication@5ba23b66]">&lt;&lt;generateReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
 </table>
